# cogrid

./: .gitignore  .readthedocs.yml  404.html  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  README_OG.rst  cramped_room_model.onnx  data.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  update_pypi.sh  v2_plan.md  v2_scratch.py
.github/workflows/: ci.yml  docs.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.2.0-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.1.0-MILESTONE-AUDIT.md  v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-ROADMAP.md
.planning/phases/: ROADMAP.md
cogrid/: __init__.py  cogrid_env.py  constants.py  gridworld_env.py  reward_module.py  run_interactive.py  run_state_demo.py  test_gridworld.py  test_gridworld_env.py  test_overcooked_env.py
contributing/: index.html
docs/: advanced-patterns.md  api-reference.md  cogrid_env.rst  conf.py  contributing.md  custom-environment.md  getting-started.md  index.md  index.rst  jax-reference.md  overcooked.md  requirements.txt
examples/: cogrid-0.2.0-cramped-room.onnx  generate_all_gifs.py  goal_finding.py  overcooked_mixed_cramped_kitchen_policy.onnx  policy.onnx  policy_partial_obs.onnx  train_overcooked_jax.py  train_overcooked_partial_obs_jax.py  train_overcooked_v2_jax.py
getting-started/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_08b0685bb92aa37b___init___py.html  z_08b0685bb92aa37b__dispatch_py.html  z_08b0685bb92aa37b_array_ops_py.html  z_08b0685bb92aa37b_env_state_py.html  z_08b0685bb92aa37b_state_view_py.html  z_0bf32f7d1eca442d_actions_py.html  z_0bf32f7d1eca442d_agent_py.html  z_0bf32f7d1eca442d_autowire_py.html  z_0bf32f7d1eca442d_component_registry_py.html  z_0bf32f7d1eca442d_constants_py.html  z_0bf32f7d1eca442d_containers_py.html  z_0bf32f7d1eca442d_directions_py.html  z_0bf32f7d1eca442d_features_py.html  z_0bf32f7d1eca442d_grid_object_base_py.html  z_0bf32f7d1eca442d_grid_object_py.html  z_0bf32f7d1eca442d_grid_object_registry_py.html  z_0bf32f7d1eca442d_grid_objects_py.html  z_0bf32f7d1eca442d_grid_py.html  z_0bf32f7d1eca442d_grid_utils_py.html  z_0bf32f7d1eca442d_interactions_py.html  z_0bf32f7d1eca442d_layout_parser_py.html  z_0bf32f7d1eca442d_layouts_py.html  z_0bf32f7d1eca442d_movement_py.html  z_0bf32f7d1eca442d_rewards_py.html  z_0bf32f7d1eca442d_roles_py.html  z_0bf32f7d1eca442d_step_pipeline_py.html  z_0bf32f7d1eca442d_typing_py.html  z_0bf32f7d1eca442d_when_py.html  z_0d96f64897e8bc4f___init___py.html  z_0d96f64897e8bc4f_base_py.html  z_0d96f64897e8bc4f_builtins_py.html  z_0d96f64897e8bc4f_containers_py.html  z_0d96f64897e8bc4f_registry_py.html  z_0d96f64897e8bc4f_when_py.html  z_16d55800ca555a45_search_rescue_grid_objects_py.html  z_16d55800ca555a45_sr_utils_py.html  (+39 more)
scripts/: gen_ref_pages.py
search/: search_index.json
(+673 files in other folders)
